playing around in js

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="develop/style.css"></script>
+  
     <title>Coding Quiz</title>
 </head>
 <body>
@@ -11,6 +13,12 @@
     <h1>Coding Quiz Challenge</h1>
     <p>A timed quiz on JavaScript fundamentals that stores high scores
         so that I can gauge my progress compared to my peers</p>
+    <div>
+<!----GIVEN I am taking a code quiz WHEN I click the start button-->
+        <button class ="START">Start</button>
+    <p id='countdown'>Timer</p>
 </div>
+
+<script src="develop/script.js"></script>
 </body>
 </html>
