--- a/index.html
+++ b/index.html
@@ -1,53 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "stylsheet" href="/develop/style.css">
     <title>Coding Quiz</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel = "stylesheet" href="/develop/style.css"/>
+
 </head>
 <!---Body of the html-->
 <body>
     <div class="container">
 
-        <div id="frontpage">
-            <h2>A timed quiz on JavaScript fundamentals that stores high scores</h2>
-            <h2>so that I can gauge my progress compared to my peers</h2>
-        <button id="startbtn">Start Code Quiz</button>
-        <button id="frontPageLeaderboard" onclick="showLeaderboard()">Leaderboard</button>
-        </div>
+        <div id="startPage">
+            <h1 class="text-center" >Coding Quiz Challenge</h1>
+            <h2 class="text-center">A timed quiz on JavaScript fundamentals that stores high scores</h2>
+            <h2 class="text-center">so that I can gauge my progress compared to my peers</h2>
 
-        <div id="quiz">
-        <div id="timer">Time</div>
-        <div id="questions"><p>where the questions go</p></div>
-        <button id="1" onclick="checkAnswer('1')">1</button>
-        <button id="2" onclick="checkAnswer('2')">2</button>
-        <button id="3" onclick="checkAnswer('3')">3</button>
-        <button id="4" onclick="checkAnswer('4')">4</button>
-        <div id="result"></div>
-</div>
-    <div id="End">
-<!----GIVEN I am taking a code quiz WHEN I click the start button-->
-<div id="finalScore">
-    <input type="text" size = "40" placeholder="ID" name= "ID" Id="ID"/>
-    <button id="submitScore">Submit Score</button>
-</div>
-<div id=highscoreContainer>
-    <div id="high-scorePage">
-        <div id="highscore-header">
-            <h3>User Initials</h3>
-            <h3>Score</h3>
+            <div class="text-center">
+       <!---startpage buttons-->
+            <button  type="button" class="btn btn-primary btn-lg">Start</button>
+        
+
+             <button  type="button" class="btn btn-primary btn-lg">High Scores</button>
         </div>
-        <div id = "highscore-initials"></div>
-        <div id = "highscore-score"></div>
     </div>
-    <div id="endGameBtns">
-        <button id="playAgain" onclick="replayQuiz()">Play Again</button>
-        <button id="clearHighscore" onclick="clearScore()">Clear Highscores</button>
-    </div>
-</div>
+            <!--background color--->
+            <style type="text/css">
+                body { background: orange !important; } /* Adding !important forces the browser to overwrite the default style applied by Bootstrap */
+             </style>
+
+<!---countdown commented out--->
+<!--<div id="countdown"></div>--->
+
+<!---answer buttons-->
+<div class="btn-group-vertical">
+    <div id="timer">Time left: <div id="countdown"></div></div>
+    <div id="questions"><p>Questions Placeholder</p></div>
+        <button id="a" onclick="checkAnswer('a')">A</button>
+        <button id="b" onclick="checkAnswer('b')">B</button>
+        <button id="c" onclick="checkAnswer('c')">C</button>
+        <button id="d" onclick="checkAnswer('d')">D</button>
+    <div id="result"></div>
+           
 </div>
 <script src="develop/script.js"></script>
 </body>
+
 </html>
